--- a/report/report.tex
+++ b/report/report.tex
@@ -12,7 +12,7 @@
 
 \author{Group ID: First Author \and
 Second Author \and
-Third Author}
+Thomas Wangler}
 
 \institute{Service Computing Department, IAAS, University of Stuttgart
 \email{firstname.lastname@uni-stuttgart.de}}
@@ -29,42 +29,9 @@ The abstract should briefly summarize the contents of the report in
 %
 %
 \section{System Introduction}
-Describe the scope (background information and problem statement) and the goals of your project.
+In the current context of the Coronavirus monitoring and controlling the room occupancy as well as the streams of people is an important task to reduce the infection rate. Therefore, it can be used to reopen facilities while minimizing the risks. For this purpose, our system counts the number of people in specific rooms, evaluates those numbers and reacts to crowding by specifying alternative ways or blocking the entry to those rooms.
 
-Table~\ref{tab1} an example of a table.
-
-\begin{table}
-\caption{Table captions should be placed above the
-tables.}\label{tab1}
-\begin{tabular}{|l|l|}
-\hline
-Item & Deadline \\
-\hline
-I1 & D1 \\
-I2 & D2 \\
-I3 & D3 \\
-I4 & D4 \\
-I5 & D5 \\
-\hline
-\end{tabular}
-\end{table}
-
-Fig.~\ref{fig1} gives an example of a figure.
-
-\begin{figure}
-\includegraphics[width=\textwidth]{fig1}
-\caption{A figure caption is always placed below the illustration.
-Please note that short captions are centered, while long ones are
-justified by the macro package automatically.} \label{fig1}
-\end{figure}
-
-For citations of references, we prefer the use of square brackets
-and consecutive numbers. The following bibliography provides
-a sample reference list with entries for journal
-articles~\cite{ref_article1}, a book~\cite{ref_book1}, proceedings without editors~\cite{ref_proc1},
-and a homepage~\cite{ref_url1}. Multiple citations are grouped
-\cite{ref_article1,ref_book1},
-\cite{ref_article1,ref_book1,ref_proc1,ref_url1}.
+Concrete use cases are, e.g., supermarkets or shopping malls. In this context our system regulates the number of customers visiting the shop at any time. Based on collected data, customers can be notified about times with a unusual high or low number of customers. 
 
 \section{System Analysis}
 Describe the user requirements of your system.
